# sift-spectral-trading-engine

./: .gitignore  CMakeLists.txt  LICENCE  README.md
data/: nvda_data.csv  sample_data.csv
data_output/: output_data.csv
include/sift/: analyse_spectral_drift.hpp  csv_reader.hpp  csv_writer.hpp  fft.hpp  generate_trade_signals.hpp  map_signal_to_time_series.hpp  spike_detector.hpp
src/: analyse_spectral_drift.cpp  csv_reader.cpp  csv_writer.cpp  fft.cpp  generate_trade_signals.cpp  main.cpp  map_signal_to_time_series.cpp  spike_detector.cpp
viz/: fetch_stock_data.py  plot.py  plot_spikes.py
